@@ -12,29 +12,11 @@ import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.plugins.Plugin;
 import org.elasticsearch.test.ESIntegTestCase;
 import org.elasticsearch.transport.netty4.Netty4Plugin;
-import org.elasticsearch.transport.nio.MockNioTransportPlugin;
-import org.junit.BeforeClass;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 public abstract class HttpSmokeTestCase extends ESIntegTestCase {
-
-    private static String nodeTransportTypeKey;
-
-    @BeforeClass
-    public static void setUpTransport() {
-        nodeTransportTypeKey = getTypeKey(randomFrom(getTestTransportPlugin(), Netty4Plugin.class));
-    }
-
-    private static String getTypeKey(Class<? extends Plugin> clazz) {
-        if (clazz.equals(MockNioTransportPlugin.class)) {
-            return MockNioTransportPlugin.MOCK_NIO_TRANSPORT_NAME;
-        } else {
-            assert clazz.equals(Netty4Plugin.class);
-            return Netty4Plugin.NETTY_TRANSPORT_NAME;
-        }
-    }
 
     @Override
     protected boolean addMockHttpTransport() {
@@ -45,14 +27,14 @@ public abstract class HttpSmokeTestCase extends ESIntegTestCase {
     protected Settings nodeSettings(int nodeOrdinal, Settings otherSettings) {
         return Settings.builder()
             .put(super.nodeSettings(nodeOrdinal, otherSettings))
-            .put(NetworkModule.TRANSPORT_TYPE_KEY, nodeTransportTypeKey)
+            .put(NetworkModule.TRANSPORT_TYPE_KEY, Netty4Plugin.NETTY_TRANSPORT_NAME)
             .put(NetworkModule.HTTP_TYPE_KEY, Netty4Plugin.NETTY_HTTP_TRANSPORT_NAME)
             .build();
     }
 
     @Override
     protected Collection<Class<? extends Plugin>> nodePlugins() {
-        return Arrays.asList(getTestTransportPlugin(), Netty4Plugin.class);
+        return List.of(getTestTransportPlugin());
     }
 
     @Override
